tests/compile_pass/public_headers/core_diagnostics.cpp
#include <pb/core/diagnostics.hpp>

int pb_public_header_core_diagnostics() { return 0; }
